Improve permission handling around interaction events